<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SaveSuccessfulActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="207dp"
        android:layout_height="177dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        app:srcCompat="@drawable/ic_succ_save"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/succ_saved_ic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="470dp"
        android:layout_height="273dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/succ_saved"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.013" />

    <ImageButton
        android:id="@+id/return_btn_from_succ_save"
        android:layout_width="208dp"
        android:layout_height="160dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.668"
        app:srcCompat="@drawable/ic_to_menu"
        android:contentDescription="@string/return_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>