<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseRankingActivity">

    <ImageButton
        android:id="@+id/return_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"

        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_go_back" />

    <Button
        android:id="@+id/all_time_ranking_button"

        android:layout_width="240dp"
        android:layout_height="140dp"
        android:layout_marginTop="50dp"

        android:background="@drawable/rounded_btn_ranking"
        android:text="@string/all_time_ranking_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_month_ranking_button" />

    <Button
        android:id="@+id/month_ranking_button"

        android:layout_width="240dp"
        android:layout_height="140dp"

        android:background="@drawable/rounded_btn_ranking"
        android:text="@string/month_ranking_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/previous_month_ranking_button"

        android:layout_width="240dp"
        android:layout_height="140dp"
        android:layout_marginTop="50dp"

        android:background="@drawable/rounded_btn_ranking"
        android:text="@string/prevoius_month_ranking_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_ranking_button" />


</androidx.constraintlayout.widget.ConstraintLayout>