<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <ImageButton
        android:id="@+id/return_button"
        android:layout_width="69dp"
        android:layout_height="63dp"
        android:background="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/abc_vector_test" />

    <LinearLayout
        android:id="@+id/altar_boys_delete_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:text="Zarządzanie ministrantami"
        app:layout_constraintBottom_toTopOf="@+id/altar_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.571" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        app:srcCompat="@android:drawable/ic_menu_today" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="146dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="Zarządzanie uroczystościami"
        app:layout_constraintBottom_toTopOf="@+id/service_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.571" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <ImageView
        android:id="@+id/altar_add_button"
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:background="@android:color/holo_blue_dark"
        android:contentDescription="@string/altar_add_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.207"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <ImageView
        android:id="@+id/service_add_button"
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/service_add_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.207"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <ImageView
        android:id="@+id/altar_delete_button"
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:background="@android:color/holo_blue_dark"
        android:contentDescription="@string/altar_delete_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altar_add_button"
        app:layout_constraintVertical_bias="0.18"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageView
        android:id="@+id/service_delete_button"
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/service_delete_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_add_button"
        app:layout_constraintVertical_bias="0.178"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>